[metadata]
name = revjo
version = attr: revjo.version.VERSION
url = https://github.com/wtnb75/revjo
author = Watanabe Takashi
author_email = wtnb75@gmail.com
license = MIT
license_file = LICENSE
description = reverse jo
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
  Development Status :: 3 - Alpha
  Intended Audience :: Developers
  License :: OSI Approved :: MIT License
  Programming Language :: Python :: 3

[options]
zip_safe = False
packages = find:

[options.entry_points]
console_scripts =
  revjo=revjo._cli:cli
